Offers View Contact Us View Newsletter View Layout Update

--- a/WaterCompany/Views/Account/ChangePassword.cshtml
+++ b/WaterCompany/Views/Account/ChangePassword.cshtml
@@ -3,38 +3,50 @@
     ViewData["Title"] = "ChangePassword";
 }
 
-<h2>ChangePassword</h2>
-
-<div class="row">
-    <div class="col-md-4 offset-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly"></div>
-
-            <div class="form-group">
-                <label asp-for="OldPassword">Current password</label>
-                <input type="password" asp-for="OldPassword" class="form-control" />
-                <span asp-validation-for="OldPassword" class="text-warning"></span>
+<br />
+<br />
+<br />
+<br />
+<h1 class="big-title"><i class="fas fa-key"></i> Change Password</h1>
+<hr />
+<br />
+<div class="centerform">
+    <form method="post">
+        <div asp-validation-summary="ModelOnly"></div>
+        <div class="row g-1">
+            <div class="col">
+                <div class="form-outline">
+                    <label asp-for="OldPassword">Current password</label>
+                    <input type="password" asp-for="OldPassword" class="form-control" />
+                    <span asp-validation-for="OldPassword" class="text-warning"></span>
+                </div>
+                <br />
+                <div class="form-outline">
+                    <label asp-for="NewPassword">New Password</label>
+                    <input type="password" asp-for="NewPassword" class="form-control" />
+                    <span asp-validation-for="NewPassword" class="text-warning"></span>
+                </div>
+                <br />
+                <div class="form-outline">
+                    <label asp-for="Confirm">Confirm Password</label>
+                    <input type="password" asp-for="Confirm" class="form-control" />
+                    <span asp-validation-for="Confirm" class="text-warning"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="NewPassword">New Password</label>
-                <input type="password" asp-for="NewPassword" class="form-control" />
-                <span asp-validation-for="NewPassword" class="text-warning"></span>
+        </div>
+        <br />
+        <br />
+        <div class="row g-5">
+            <div class="col">
+                <div class="form-outline">
+                    <button type="submit" value="Change password" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> <i class="fas fa-key"></i></button>
+                    <a class="btn btn-outline-primary" asp-action="ChangeUser"><i class="fas fa-backward"></i></a>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Confirm">Confirm Password</label>
-                <input type="password" asp-for="Confirm" class="form-control" />
-                <span asp-validation-for="Confirm" class="text-warning"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Change password" class="btn btn-primary" />
-                <a asp-action="ChangeUser" class="btn btn-success">Back to user</a>
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
-
-@section Scripts{
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-    }
+<br />
+<br />
+<br />
+<br />
