--- a/WaterCompany/Views/Account/ChangeUser.cshtml
+++ b/WaterCompany/Views/Account/ChangeUser.cshtml
@@ -20,6 +20,11 @@
                 <span asp-validation-for="LastName" class="text-warning"></span>
             </div>
             <div class="form-outline flex-fill mb-0">
+                <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-outline flex-fill mb-0">
                 <label class="form-label" asp-for="CountryId" class="control-label"></label>
                 <select asp-for="CountryId" asp-items="Model.Countries" class="form-control text-center"></select>
                 <span asp-validation-for="CountryId" class="text-danger"></span>
@@ -28,16 +33,6 @@
                 <label class="form-label" asp-for="CityId" class="control-label"></label>
                 <select asp-for="CityId" asp-items="Model.Cities" class="form-control text-center"></select>
                 <span asp-validation-for="CityId" class="text-danger"></span>
-            </div>
-            <div class="form-outline flex-fill mb-0">
-                <label class="form-label" asp-for="Address">Address</label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-outline flex-fill mb-0">
-                <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
@@ -66,7 +61,7 @@
                     data: { countryId: $("#CountryId").val() },
                     success: function (cities) {
                         debugger;
-                        $("#CityId").append('<option value="0">(Select a city!)</option>');
+                        $("#CityId").append('<option value="0">Select a city!</option>');
                         $.each(cities, function (i, city) {
                             $("#CityId").append('<option value="'
                                 + city.id + '">'
