--- a/WaterCompany/Views/Account/RecoverPassword.cshtml
+++ b/WaterCompany/Views/Account/RecoverPassword.cshtml
@@ -21,7 +21,7 @@
 
             <div class="form-group">
                 <input type="submit" value="Recover password" class="btn btn-primary" />
-                <a asp-action="Login" class="btn btn-success"><i class="fa-solid fa-arrow-left-long"></i></a>
+                <a asp-action="Login" class="btn btn-success"><i class="fas fa-arrow-left-long"></i></a>
             </div>
         </form>
         <div class="text-success">
