--- a/WaterCompany/wwwroot/css/site.css
+++ b/WaterCompany/wwwroot/css/site.css
@@ -475,8 +475,9 @@ tr {
 }
 
 .big-title1 {
-    font-size: 30px;
+    font-size: 33px;
     font-weight: bolder;
+    font-family:'Franklin Gothic'
 }
 
 form {
@@ -527,8 +528,8 @@ dd {
     position: fixed;
     bottom: 800px;
     right: 40px;
-    width: 60px;
-    height: 60px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     background-size: 40px;
     background-position: center;
