--- a/WaterCompany/wwwroot/css/style.css
+++ b/WaterCompany/wwwroot/css/style.css
@@ -51,18 +51,18 @@ a {
     cursor: pointer;
 }
 
-.logo img {
-    width: 40px;
-    margin-right: 0.6rem;
-    margin-top: -0.6rem;
-}
+    .logo img {
+        width: 40px;
+        margin-right: 0.6rem;
+        margin-top: -0.6rem;
+    }
 
-.logo h3 {
-    color: var(--darkTwo);
-    font-size: 1.55rem;
-    line-height: 1.2;
-    font-weight: 700;
-}
+    .logo h3 {
+        color: var(--darkTwo);
+        font-size: 1.55rem;
+        line-height: 1.2;
+        font-weight: 700;
+    }
 
 .links ul {
     display: flex;
@@ -77,10 +77,10 @@ a {
     transition: 0.3s;
 }
 
-.links a:hover {
-    color: var(--hoverColor);
-    transform: scale(1.05);
-}
+    .links a:hover {
+        color: var(--hoverColor);
+        transform: scale(1.05);
+    }
 
 .btn {
     display: inline-block;
@@ -91,10 +91,10 @@ a {
     transition: 0.3s;
 }
 
-.btn:hover {
-    background-color: var(--hoverColor);
-    transform: scale(1) !important;
-}
+    .btn:hover {
+        background-color: var(--hoverColor);
+        transform: scale(1) !important;
+    }
 
 .showcase-area .container {
     display: grid;
@@ -142,13 +142,13 @@ a {
     transition: 0.3s;
 }
 
-.toggle-btn i {
-    line-height: 39px;
-}
+    .toggle-btn i {
+        line-height: 39px;
+    }
 
-.toggle-btn:hover {
-    background: var(--mainColor);
-}
+    .toggle-btn:hover {
+        background: var(--mainColor);
+    }
 
 .big-wrapper.light .toggle-btn i:last-child {
     display: none;
@@ -266,7 +266,93 @@ a {
     }
 }
 
-.right{
+.right {
     padding-right: 15px;
     padding-top: 85px;
+}
+
+/* --- Newsletter --- */
+
+.newsletter-subscribe {
+    color: #313437;
+    background-color: #fff;
+    padding: 50px 0;
+}
+
+    .newsletter-subscribe p {
+        color: #7d8285;
+        line-height: 1.5;
+    }
+
+    .newsletter-subscribe h2 {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 25px;
+        line-height: 1.5;
+        padding-top: 0;
+        margin-top: 0;
+        color: inherit;
+    }
+
+    .newsletter-subscribe .intro {
+        font-size: 16px;
+        max-width: 500px;
+        margin: 0 auto 25px;
+    }
+
+        .newsletter-subscribe .intro p {
+            margin-bottom: 35px;
+        }
+
+    .newsletter-subscribe form {
+        justify-content: center;
+    }
+
+        .newsletter-subscribe form .form-control {
+            background: #eff1f4;
+            border: none;
+            border-radius: 3px;
+            box-shadow: none;
+            outline: none;
+            color: inherit;
+            text-indent: 9px;
+            height: 45px;
+            margin-right: 10px;
+            min-width: 250px;
+        }
+
+        .newsletter-subscribe form .btn {
+            padding: 16px 32px;
+            border: none;
+            background: none;
+            box-shadow: none;
+            text-shadow: none;
+            opacity: 0.9;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 13px;
+            letter-spacing: 0.4px;
+            line-height: 1;
+        }
+
+            .newsletter-subscribe form .btn:hover {
+                opacity: 1;
+            }
+
+            .newsletter-subscribe form .btn:active {
+                transform: translateY(1px);
+            }
+
+        .newsletter-subscribe form .btn-primary {
+            background-color: #055ada !important;
+            color: #fff;
+            outline: none !important;
+        }
+
+label {
+    box-shadow: rgba(0,0,0,0.35) 0 5px 15px;
+}
+
+.card{
+    height: 395px;
 }
