--- a/WaterCompany/Views/Employees/Details.cshtml
+++ b/WaterCompany/Views/Employees/Details.cshtml
@@ -26,22 +26,22 @@
                 <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width: auto; height: 70px;" />
             </dd>
             <dt class="col-3">
-                @Html.DisplayNameFor(model => model.User.FirstName)
+                @Html.DisplayNameFor(model => model.FirstName)
             </dt>
             <dd class="col-9">
-                @Html.DisplayFor(model => model.User.FirstName)
+                @Html.DisplayFor(model => model.FirstName)
             </dd>
             <dt class="col-3">
-                @Html.DisplayNameFor(model => model.User.LastName)
+                @Html.DisplayNameFor(model => model.LastName)
             </dt>
             <dd class="col-9">
-                @Html.DisplayFor(model => model.User.LastName)
+                @Html.DisplayFor(model => model.LastName)
             </dd>
             <dt class="col-3">
-                @Html.DisplayNameFor(model => model.User.PhoneNumber)
+                @Html.DisplayNameFor(model => model.PhoneNumber)
             </dt>
             <dd class="col-9">
-                @Html.DisplayFor(model => model.User.PhoneNumber)
+                @Html.DisplayFor(model => model.PhoneNumber)
             </dd>
             <dt class="col-3">
                 @Html.DisplayNameFor(model => model.Address)
@@ -62,10 +62,10 @@
                 @Html.DisplayFor(model => model.TIN)
             </dd>
             <dt class="col-3">
-                @Html.DisplayNameFor(model => model.User.Email)
+                @Html.DisplayNameFor(model => model.Email)
             </dt>
             <dd class="col-9">
-                @Html.DisplayFor(model => model.User.Email)
+                @Html.DisplayFor(model => model.Email)
             </dd>
 
         </dl>
