--- a/WaterCompany/Views/Employees/Index.cshtml
+++ b/WaterCompany/Views/Employees/Index.cshtml
@@ -17,10 +17,10 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.User.FullName)
+                    @Html.DisplayNameFor(model => model.FullName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.User.PhoneNumber)
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Address)
@@ -32,7 +32,7 @@
                     @Html.DisplayNameFor(model => model.TIN)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.User.Email)
+                    @Html.DisplayNameFor(model => model.Email)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ImageFullPath)
@@ -45,10 +45,10 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.User.FullName)
+                        @Html.DisplayFor(modelItem => item.FullName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.User.PhoneNumber)
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Address)
@@ -60,7 +60,7 @@
                         @Html.DisplayFor(modelItem => item.TIN)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.User.Email)
+                        @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
                         @if (!string.IsNullOrEmpty(item.ImageFullPath))
@@ -79,10 +79,10 @@
         <tfoot>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.User.FullName)
+                    @Html.DisplayNameFor(model => model.FullName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.User.PhoneNumber)
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Address)
@@ -94,7 +94,7 @@
                     @Html.DisplayNameFor(model => model.TIN)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.User.Email)
+                    @Html.DisplayNameFor(model => model.Email)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ImageFullPath)
