--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -45,11 +45,13 @@
                                     <a class="dropdown-item" asp-controller="Countries" asp-action="Index"><i class="fas fa-globe-europe"></i> Countries and Cities</a>
                                 </div>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Clients" asp-action="Index"><i class="fas fa-users"></i> Clients</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Employees" asp-action="Index"><i class="fas fa-user-secret"></i> Employees</a>
+                            <li class="nav-item dropdown nav-user">
+                                <a style="color: #343a40; cursor: pointer;" class="dropdown-toggle nav-link nav-user-img" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-sync"></i> Management</a>
+                                <div class="dropdown-menu dropdown-menu-left nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
+                                    <a class="dropdown-item" asp-controller="Contracts" asp-action="Index"><i class="fas fa-file-signature"></i> Contracts</a>
+                                    <a class="dropdown-item" asp-controller="Clients" asp-action="Index"><i class="fas fa-users"></i> Clients</a>
+                                    <a class="dropdown-item" asp-controller="Employees" asp-action="Index"><i class="fas fa-user-secret"></i> Employees</a>
+                                </div>
                             </li>
                         }
                     </ul>
