--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                                 <a style="color: #343a40; cursor: pointer;" class="dropdown-toggle nav-link nav-user-img" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-briefcase"></i> Backoffice</a>
                                 <div class="dropdown-menu dropdown-menu-left nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                     <a class="dropdown-item" asp-controller="Account" asp-action="Register"><i class="fas fa-user-plus"></i> Register</a>
-                                    <a class="dropdown-item" asp-controller="Users" asp-action="Index"><i class="fas fa-user"></i> Users</a>
+                                    @*<a class="dropdown-item" asp-controller="Users" asp-action="Index"><i class="fas fa-user"></i> Users</a>*@
                                     <a class="dropdown-item" asp-controller="Roles" asp-action="Index"><i class="fas fa-book"></i> Roles</a>
                                     <a class="dropdown-item" asp-controller="Countries" asp-action="Index"><i class="fas fa-globe-europe"></i> Countries and Cities</a>
                                 </div>
@@ -51,6 +51,8 @@
                                     <a class="dropdown-item" asp-controller="Contracts" asp-action="Index"><i class="fas fa-file-signature"></i> Contracts</a>
                                     <a class="dropdown-item" asp-controller="Clients" asp-action="Index"><i class="fas fa-users"></i> Clients</a>
                                     <a class="dropdown-item" asp-controller="Employees" asp-action="Index"><i class="fas fa-user-secret"></i> Employees</a>
+                                    <a class="dropdown-item" asp-controller="Invoices" asp-action="Index"><i class="fas fa-file-invoice-dollar"></i> Invoices</a>
+                                    <a class="dropdown-item" asp-controller="Consumptions" asp-action="Index"><i class="fas fa-tint"></i> Consumptions</a>
                                 </div>
                             </li>
                         }
